# terminal-games

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Dockerfile.cli  Dockerfile.server  README.md  Taskfile.yml  flake.nix  fly.toml  go.mod  go.sum  rust-toolchain.toml  terminal-games.schema.json
.cargo/: config.toml
.github/workflows/: release.yaml
cmd/menu/: about.go  about_map.go  about_world_high.go  games.go  localization.go  main.go  menuhost.go  profile.go  terminal-games.json  viewport.go
cmd/menu/carousel/: carousel.go
cmd/menu/gamelist/: gamelist.go
cmd/menu/tabs/: tabs.go
cmd/menu/theme/: palette.go
cmd/menu/translations/: chinese.go  english.go  german.go  japanese.go  spanish.go
docs/: screenshot.md
examples/go/basic/: main.go  target.json  wkg.toml
examples/go/basic/wit/: menu.wit
examples/go/net/: main.go
examples/kitchen-sink/: main.go  terminal-games.json
examples/net/: main.go
examples/ratatui/: Cargo.toml
examples/ratatui/src/: ansi_backend.rs  main.rs  tg_backend.rs
examples/rust-kitchen-sink/: Cargo.toml  build.rs  terminal-games.json
examples/rust-kitchen-sink/src/: main.rs
examples/rust-simple/: Cargo.toml  terminal-games.json
examples/rust-simple/src/: main.rs
headless-terminal/: Cargo.toml  LICENSE  README.md
headless-terminal/src/: grid.rs  lib.rs  perform.rs  screen.rs  term.rs
infra/: .gitignore  .terraform.lock.hcl  ansible.cfg  cert-sync-playbook.yaml  cloud-init.yaml  inventory.tftpl  main.tf  secrets.example.yml  sync-playbook.yaml  terminal-games-server.env.j2  terminal-games-server.service.j2
pkg/app/: app.go
pkg/audio/: audio.go  host.go  instance.go  mixer.go  ogg_vorbis.go  raw.go
pkg/bubblewrap/: wrap.go
pkg/internal/hosterr/: hosterr.go
pkg/kv/: kv.go
pkg/log/: log.go  slog.go  std.go
pkg/net/: net.go
pkg/net/http/: http.go
pkg/peer/: peer.go
pkg/term/: term.go
terminal-games/: Cargo.toml
terminal-games-cli/: Cargo.toml
terminal-games-cli/src/: admin.rs  audio.rs  author.rs  completion_cache.rs  config.rs  control_client.rs  main.rs  run.rs
terminal-games-cli/src/admin/: auth.rs  ban_ip.rs  broadcast.rs  cluster_ip.rs  drain.rs  mod.rs  nodes.rs  regions.rs  ticker.rs
terminal-games-cli/src/admin/app/: create.rs  delete.rs  list.rs  mod.rs  rotate_token.rs
terminal-games-cli/src/admin/author/: create.rs  delete.rs  list.rs  mod.rs  rotate_token.rs
terminal-games-cli/src/admin/session/: kick.rs  list.rs  mod.rs  spy.rs
terminal-games-cli/src/app/: auth.rs  delete.rs  list.rs  manifest.rs  mod.rs  rotate_token.rs  upload.rs
terminal-games-cli/src/app/env/: delete.rs  list.rs  mod.rs  set.rs
terminal-games-cli/src/author/: auth.rs  delete.rs  list.rs  mod.rs  rotate_token.rs  upload.rs
terminal-games-cli/src/author/env/: delete.rs  list.rs  mod.rs  set.rs
terminal-games-manifest/: Cargo.toml
terminal-games-manifest/src/: lib.rs
terminal-games-sdk/: Cargo.toml
terminal-games-sdk/src/: ansi_backend.rs  app.rs  audio.rs  kv.rs  lib.rs  log.rs  manifest.rs  network.rs  peer.rs  terminal.rs
terminal-games-sdk/src/audio/: host.rs  instance.rs  mixer.rs  mod.rs  ogg_vorbis.rs  raw.rs
terminal-games-server/: Cargo.toml
terminal-games-server/src/: admission.rs  cluster_detection.rs  cluster_kicked_ips.rs  control.rs  idle.rs  kv.rs  main.rs  metrics.rs  notifications.rs  sessions.rs  shutdown.rs  ssh.rs  web.rs
terminal-games-server/src/kv/: tests.rs
terminal-games-server/web/: index.html  jitter-buffer-processor.js  main.js  opus-audio-player.js  styles.css
terminal-games/libsql/: migrate-001.sql
terminal-games/src/: app.rs  app_env.rs  app_registry.rs  audio.rs  author_env.rs  control.rs  db.rs  game_registry.rs  input_guard.rs  kv.rs  lib.rs  log_backend.rs  main.rs  manifest.rs  mesh.rs  palette.rs  rate_limiting.rs  replay.rs  ssh.rs  status_bar.rs  terminal_profile.rs  wasm_abi.rs  web.rs
terminal-games/src/app/: app.rs  audio.rs  kv.rs  log.rs  menu.rs  mod.rs  net.rs  peer.rs  terminal.rs
terminal-games/src/app/wasm_host/: app.rs  audio.rs  log.rs  menu.rs  mod.rs  net.rs  peer.rs  terminal.rs
terminal-games/src/kv/: libsql.rs  mesh.rs
terminal-games/web/: audio-socket.js  index.html  jitter-buffer-processor.js  main.js  opus-audio-player.js  styles.css
wit/: app.wit
