[workspace]
resolver = "2"
members = [
    "examples/rust-kitchen-sink",
    "examples/rust-simple",
    "headless-terminal",
    "terminal-games-cli",
    "terminal-games-manifest",
    "terminal-games-sdk",
    "terminal-games-server",
    "terminal-games",
]

default-members = [
    "terminal-games-cli",
    "terminal-games-server",
]

# [profile.release]
# lto = true
# codegen-units = 1
# panic = "abort"
