[package]
name = "terminal-games-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
dirs = "6"
flate2 = "1"
futures = "0.3"
hyper = "1"
hyper-util = "0.1"
libsql = "0.9"
ogg = "0.9"
opus = "0.3"
audiopus_sys = { version = "0.2", features = ["static"] }
rand = "0.9"
rand_core = "0.6"
russh = "0.57"
serde = { version = "1", features = ["derive"] }
smallvec = "1"
terminal-games = { path = "../terminal-games" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
pulseaudio = "0.3"

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.17"
