[package]
name = "terminal-games-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
audiopus_sys = { version = "0.2", features = ["static"] }
avt = "0.17"
axum = { version = "0.8", features = ["ws"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
crossterm = { version = "0.29", features = ["event-stream"] }
dialoguer = "0.12"
dirs = "6"
flate2 = "1"
futures = "0.3"
hyper = "1"
hyper-util = "0.1"
ipnet = "2"
libsql = "0.9"
ogg = "0.9"
opus = "0.3"
rand = "0.9"
rand_core = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "multipart", "rustls-tls"] }
russh = "0.57"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
terminal-games = { path = "../terminal-games" }
terminput = "0.5"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio-util = "0.7"
toml = "0.8"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
pulseaudio = "0.3"

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.17"
