[package]
name = "terminal-games-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.30", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", default-features = false, optional = true }
terminal-games-manifest = { path = "../terminal-games-manifest" }
terminput = "0.5"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
network = []
ogg-vorbis = ["dep:symphonia", "symphonia/ogg", "symphonia/vorbis"]
