[package]
name = "terminal-games-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bytes = "1"
flate2 = "1"
futures = "0.3"
hyper = "1"
hyper-util = "0.1"
libsql = "0.9"
rand_core = "0.6"
rustls-pemfile = "2"
russh = "0.57"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
smallvec = "1"
terminal-games = { path = "../terminal-games" }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tokio-util = "0.7"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
wasmparser = "0.245"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1"
