[package]
name = "terminal-games-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
avt = "0.17"
axum = { version = "0.8", features = ["multipart", "ws"] }
base64 = "0.22"
bytes = "1"
flate2 = "1"
futures = "0.3"
hex = "0.4"
hyper = "1"
hyper-util = "0.1"
ipnet = "2"
libsql = "0.9"
prometheus = "0.14"
rand_core = "0.6"
russh = "0.57"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
smallvec = "1"
sysinfo = "0.38"
tarpc = { version = "0.37", features = ["serde", "serde-transport", "serde-transport-bincode", "tokio1"] }
terminal-games = { path = "../terminal-games" }
terminput = "0.5"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tokio-tungstenite = "0.29"
tokio-util = "0.7"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
time = { version = "0.3", features = ["formatting", "parsing"] }
wasmparser = "0.245"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1"
