[package]
name = "terminal-games"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
ffmpeg-next = { version = "8", default-features = false, features = ["codec", "device"] }
futures = "0.3"
headless-terminal = { path = "../headless-terminal" }
hex = "0.4"
ipnet = "2"
libc = "0.2"
libsql = "0.9"
postcard = { version = "1", default-features = false }
rand_core = "0.6"
rustls = "0.23"
rustls-pki-types = "1"
serde = { version = "1", features = ["derive"] }
smallvec = "1"
strip-ansi-escapes = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "tls12",
] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-width = "0.2"
wasmtime = "40"
wasmtime-wasi = { version = "40", default-features = false, features = ["p1"] }
webpki-roots = "1"
yansi = { version = "1", features = ["hyperlink"] }
