[package]
name = "terminal-games"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
avt = "0.17"
async-trait = "0.1"
bytes = "1"
futures = "0.3"
headless-terminal = { path = "../headless-terminal" }
hex = "0.4"
ipnet = "2"
libc = "0.2"
libsql = "0.9"
ogg = "0.9"
opus = "0.3"
audiopus_sys = { version = "0.2", features = ["static"] }
postcard = { version = "1", default-features = false }
rand_core = "0.6"
reqwest = { version = "0.13", features = ["multipart", "json"] }
rustls = "0.23"
rustls-platform-verifier = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
strip-ansi-escapes = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "tls12",
] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-width = "0.2"
uuid = { version = "1", features = ["v4"] }
wasmtime = "40"
wasmtime-wasi = { version = "40", default-features = false, features = ["p1"] }
yansi = { version = "1", features = ["hyperlink"] }
