[package]
name = "ratatui-example"
version = "0.1.0"
edition = "2024"

[dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.19", default-features = false, features = [
    "tokio",
    "http1",
    "http2",
] }
ratatui = { version = "0.29.0", default-features = false }
tachyonfx = { version = "0.21.0", default-features = false, features = [
    "wasm",
] }
terminput = "0.5.12"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt",
    "io-util",
    "sync",
    "time",
] }
