[package]
name = "rust-kitchen-sink"
version = "0.1.0"
edition = "2024"

[dependencies]
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", default-features = false, features = [
    "tokio",
    "http1",
    "http2",
] }
ratatui = { version = "0.29", default-features = false }
tachyonfx = { version = "0.21", default-features = false, features = ["wasm"] }
tokio = { version = "1", features = ["macros", "time"] }
terminal-games-sdk = { path = "../../terminal-games-sdk", features = [
    "network",
] }
